// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountFields/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-jKJlTe fkNCah"
  >
    <div
      class="sc-ckVGcZ kvHIve"
    >
      <button
        type="button"
        class="sc-htpNat fpAZyb"
        data-testid="max-btn"
        tabindex="-1"
      >
        MAX
      </button>
      <div>
        <label
          class="sc-dnqmqq ilsafR"
          for="ethAmount"
        >
          Amount (ETH)
        </label>
        <input
          type="text"
          class="sc-iwsKbI kZiHEX"
          value=""
          id="ethAmount"
          data-testid="ethAmount-field"
          placeholder="0.00"
        />
      </div>
    </div>
    <div
      class="sc-hMqMXs dnTKXF"
    >
      <svg
        class="sc-bxivhb hXQRLM"
        viewBox="0 0 24 24"
      >
        <path
          d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
        />
      </svg>
    </div>
    <div
      class="sc-ckVGcZ kvHIve"
    >
      <div>
        <label
          class="sc-dnqmqq ilsafR"
          for="usdAmount"
        >
          Amount (USD)
        </label>
        <input
          type="text"
          class="sc-iwsKbI kZiHEX"
          value=""
          id="usdAmount"
          data-testid="usdAmount-field"
          placeholder="0.00"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ConvertETHtoMETForm/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-eNQAEJ hdurla"
  >
    <div
      class="sc-hMqMXs dKMJsu"
    >
      <form
        data-testid="ethToMet-form"
        novalidate=""
        id="convertForm"
      >
        <div
          class="sc-jKJlTe fkNCah"
        >
          <div
            class="sc-ckVGcZ kvHIve"
          >
            <button
              type="button"
              class="sc-htpNat fpAZyb"
              data-testid="max-btn"
              tabindex="-1"
            >
              MAX
            </button>
            <div>
              <label
                class="sc-dnqmqq ilsafR"
                for="ethAmount"
              >
                Amount (ETH)
              </label>
              <input
                type="text"
                class="sc-iwsKbI kZiHEX"
                value=""
                id="ethAmount"
                data-testid="ethAmount-field"
                placeholder="0.00"
              />
            </div>
          </div>
          <div
            class="sc-hMqMXs dnTKXF"
          >
            <svg
              class="sc-bxivhb hXQRLM"
              viewBox="0 0 24 24"
            >
              <path
                d="M24 7.136v.96H1.642l4.464 4.464-.682.682-5.28-5.28a.475.475 0 0 1 0-.682L5.424 2l.682.682-4.464 4.464H24v-.01zM18.576 11.6l-.682.682 4.464 4.464H0v.96h22.358l-4.464 4.464.682.681 5.28-5.28a.475.475 0 0 0 0-.681l-5.28-5.29z"
              />
            </svg>
          </div>
          <div
            class="sc-ckVGcZ kvHIve"
          >
            <div>
              <label
                class="sc-dnqmqq ilsafR"
                for="usdAmount"
              >
                Amount (USD)
              </label>
              <input
                type="text"
                class="sc-iwsKbI kZiHEX"
                value=""
                id="usdAmount"
                data-testid="usdAmount-field"
                placeholder="0.00"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-hMqMXs bQjXee"
        >
          <div
            class="sc-jKJlTe kWLJKD"
          >
            <div
              class="sc-jKJlTe jGctBw"
            >
              <span
                class="sc-csuQGl izFJpS"
              >
                Gas Limit: 
                250000
                (Units)
              </span>
              <span
                class="sc-csuQGl izFJpS"
              >
                Gas Price: 
                1
                (Gwei)
              </span>
            </div>
            <button
              type="button"
              class="sc-htpNat bqwpzm"
              data-testid="edit-gas-btn"
              tabindex="-1"
            >
              EDIT GAS
            </button>
          </div>
        </div>
        <div
          class="sc-cMljjf bXskYr"
        >
          Enter a valid amount to get a conversion estimate.
        </div>
        <div>
          <label
            class="sc-jDwBTQ eiQZdA"
          >
            <input
              type="checkbox"
              class="sc-gPEVay hXTYYH"
              data-testid="useMinimum-cb"
              id="useMinimum"
            />
            <span
              class="sc-iRbamj cArvmr"
            >
              Get expected MET amount or cancel
            </span>
            <span
              class="sc-jlyJG cDmJhB"
              data-rh-darker="true"
              data-rh-width="400px"
              data-rh="This option will cancel the conversion if there is a change in price after you submit the transaction and the expected conversion amount is not met.  Gas will be consumed regardless."
            >
              <svg
                width="14px"
                height="14px"
                viewBox="0 0 14 14"
              >
                <path
                  stroke="none"
                  fill="white"
                  d="M6.33333333,10.3333333 L7.66666667,10.3333333 L7.66666667,6.33333333 L6.33333333,6.33333333 L6.33333333,10.3333333 L6.33333333,10.3333333 Z M7,0.333333333 C3.32,0.333333333 0.333333333,3.32 0.333333333,7 C0.333333333,10.68 3.32,13.6666667 7,13.6666667 C10.68,13.6666667 13.6666667,10.68 13.6666667,7 C13.6666667,3.32 10.68,0.333333333 7,0.333333333 L7,0.333333333 Z M7,12.3333333 C4.06,12.3333333 1.66666667,9.94 1.66666667,7 C1.66666667,4.06 4.06,1.66666667 7,1.66666667 C9.94,1.66666667 12.3333333,4.06 12.3333333,7 C12.3333333,9.94 9.94,12.3333333 7,12.3333333 L7,12.3333333 Z M6.33333333,5 L7.66666667,5 L7.66666667,3.66666667 L6.33333333,3.66666667 L6.33333333,5 L6.33333333,5 Z"
                />
              </svg>
            </span>
          </label>
        </div>
      </form>
    </div>
    <div
      class="sc-bRBYWo ebOYwZ"
    >
      <button
        type="submit"
        class="sc-bwzfXH gAMukr"
        form="convertForm"
      >
        Review Convert
      </button>
    </div>
  </div>
</div>
`;

exports[`<GasEditor/> should match its snapshot 1`] = `
<div>
  <div
    class="sc-jKJlTe fkNCah"
  >
    <div
      class="sc-ckVGcZ kvHIve"
    >
      <div>
        <label
          class="sc-dnqmqq ilsafR"
          for="gasLimit"
        >
          Gas Limit (Units)
        </label>
        <input
          type="text"
          class="sc-iwsKbI kZiHEX"
          value="21000"
          id="gasLimit"
          data-testid="gas-limit-field"
        />
      </div>
    </div>
    <div
      class="sc-hMqMXs keWZLk"
    />
    <div
      class="sc-ckVGcZ kvHIve"
    >
      <div>
        <label
          class="sc-dnqmqq ilsafR"
          for="gasPrice"
        >
          Gas Price (Gwei)
        </label>
        <input
          type="text"
          class="sc-iwsKbI kZiHEX"
          value="1"
          id="gasPrice"
          data-testid="gas-price-field"
        />
      </div>
    </div>
  </div>
</div>
`;
